# trach-game-IO2018L

./: .gitignore  README.md  build.sbt
bot/src/main/java/bot/: BotActor.java
bot/src/main/scala/: BotActor.scala
bot/src/test/java/: BotActorTest.java
bot/src/test/resources/: logback.xml  test.conf
bot/src/test/scala/: BotActorTest.scala  BotActorTestScala.scala
desktopclient/: CMakeLists.txt  generateGraphics.sh  resources.qrc
desktopclient/GimpGraphicsSources/: avatar.xcf  heart.xcf
desktopclient/Src/: CMakeLists.txt  ServerConnection.h  main.cpp
desktopclient/Src/Core/: Card.h  CardNode.h  CardTree.h  CardTreeInternalNode.h  GUIUpdater.h  GameState.h  PlayedCardInTree.h  PlayedStartingCard.h  Player.h
desktopclient/Src/Core/Requests/: GameStateRequest.h  QuickMultiplayerGameRequest.h
desktopclient/Src/Core/Responses/: GameStateUpdate.h  GameplayStateUpdate.h
desktopclient/Src/UI/: CardUI.h  CurrentCardTreeUI.h  CurrentTreeTableUI.cpp  CurrentTreeTableUI.h  GUIUpdater.h  HandUI.cpp  HandUI.h  HealthBarUI.h  InGameUI.h  MainTableUI.cpp  MainTableUI.h  PlayerInfoUI.cpp  PlayerInfoUI.h  PlayersUI.h
docs/: index.html
game/: README.md
game/src/main/resources/: logback.xml
game/src/main/scala/game/: Logging.scala  package.scala
game/src/main/scala/game/abstracts/: Action.scala  Attribute.scala  AttributesSet.scala  Card.scala  Character.scala  CircleOfCharacters.scala  GameState.scala  Tree.scala
game/src/main/scala/game/core/: Action.scala  Actions.scala  Attribute.scala  AttributesSet.scala  Card.scala  CircleOfPlayers.scala  GameState.scala  HandExchange.scala  PlayedCard.scala  (+6 more)
game/src/test/resources/: test.conf
game/src/test/scala/: ActionTest.scala  ApiTest.scala  CardTest.scala  DafaultData.scala  GamePlayActorTest.scala  GameTest.scala  PlayingCardsTest.scala  TableTest.scala
jvmapi/src/main/scala/jvmapi/: JsonUtils.scala  Messages.scala  Models.scala  PlayerDriver.scala
project/: plugins.sbt
server/: README.md
server/app/actors/: ClientActor.scala  GamesManagerActor.scala  MultiplayerGameActor.scala  PlayerDriver.scala  PlayersAndDrivers.scala
server/app/controllers/: CustomActorFlow.scala  MainController.scala
server/app/db/: Database.scala
server/app/gamesettings/: DefaultGame.scala
server/app/main/: CustomSSLEngineProvider.scala
server/app/messages/: package.scala
server/app/messagesapi/: JsonUtils.scala  package.scala
server/conf/: application.conf  logback.xml  routes
server/public/: display.js  game.css  game.html  socket.js
server/test/: websocket-http.html  websocket.html
(+23 files in other folders)
